--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <title>Woody World</title>
-    <meta name='description' content='Discover the world of Woody !' />
-    <link rel='icon' href='/capybara.svg'/>
+    <meta name="description" content="Discover the world of Woody !" />
+    <link rel="icon" href="/capybara.svg" />
   </head>
   <body>
     <div id="root"></div>
